--- a/index.css
+++ b/index.css
@@ -101,7 +101,7 @@ a1 {
 
 .espaco-resultado {
     color: #a0a0a0;
-    font-family: "Luckiest Guy", cursive;
+    font-family: "Libertinus Sans", sans-serif;;
     font-size: 20px;
 }
 
@@ -125,6 +125,7 @@ a1 {
     left: 2;
     visibility: hidden;
 }
+
 
 
 
