--- a/index.css
+++ b/index.css
@@ -127,5 +127,11 @@ a1 {
 }
 
 
-
+#tarefas {
+ background-color: white;
+    color: rgba(180, 180, 180, 0.801);
+    padding: 10px;
+    margin: 30px;
+    width: 105px;   
+}
 
