estilização do botão de tarefas

--- a/index.css
+++ b/index.css
@@ -127,11 +127,12 @@ a1 {
 }
 
 
-#tarefas {
+#contagemdetarefas {
  background-color: white;
     color: rgba(180, 180, 180, 0.801);
     padding: 10px;
     margin: 30px;
     width: 105px;   
 }
+
 
