--- a/index.css
+++ b/index.css
@@ -127,12 +127,13 @@ a1 {
 }
 
 
-#contagemdetarefas {
+.contagemdetarefas {
  background-color: white;
     color: rgba(180, 180, 180, 0.801);
     padding: 10px;
     margin: 30px;
     width: 105px;   
 }
+
 
 
