--- a/index.css
+++ b/index.css
@@ -129,9 +129,8 @@ h4 {
 
 button[id="btnreinicia"]  {
     background-color: gray;
-    text-align: center;
     color: white;
-    margin: 25px;
+    margin: 25px 0 auto;
     width: 115px;
     padding: 12px;
 }
@@ -140,6 +139,7 @@ button[id="btnreinicia"]:hover {
     background-color: rgb(255, 102, 102);
     transition: 1s;
 }
+
 
 
 
