btn zera tarefas

--- a/index.css
+++ b/index.css
@@ -132,12 +132,15 @@ button[id="btnreinicia"]  {
     color: white;
     width: 115px;
     padding: 12px;
-    text-align: center;
 }
 
 button[id="btnreinicia"]:hover {
     background-color: rgb(255, 102, 102);
     transition: 1s;
+}
+
+divbtnzeratarefas {
+    text-align: center;
 }
 
 
